[package]
name = "ahq-store-sample-app"
version = "1.2.3"
description = "A Tauri App"
authors = ["AHQ Store Developers"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = ["shell-open"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[features]
custom-protocol = ["tauri/custom-protocol"]
