[package]
name = "ahq-store-sample-app"
version = "1.3.1"
description = "A Tauri App"
authors = ["AHQ Store Developers"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.7.2", features = ["shell-open"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

[features]
custom-protocol = ["tauri/custom-protocol"]
